--- a/ode-java-extension/pom.xml
+++ b/ode-java-extension/pom.xml
@@ -16,10 +16,38 @@
         <dependency>
             <groupId>org.apache.ode.wso2</groupId>
             <artifactId>ode</artifactId>
-            <version>1.3.5.wso2v12</version>
+            <version>1.3.5.wso2v11</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>ode-dao-hibernate</artifactId>
+                    <groupId>org.wso2.bpel</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>ode-dao-hibernate-db</artifactId>
+                    <groupId>org.wso2.bpel</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.3</version>
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <repositories>
         <repository>
