--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>ode-java-extension</module>
+
+        <module>bpel-samples/HelloWorld2</module>
     </modules>
 
 
